[*] Updated declarations for ECommons-EDB-0.2.0   - Updated platform to JavaSE-6   - Updated libs to DBCP-1.4, Pool-1.5.7
Signed-off-by: Stephan Wahlbrink <sw@wahlbrink.eu>